# position-effect-correction

./: .gitignore  .pre-commit-config.yaml  README.md  black.toml  pyproject.toml
.github/workflows/: format-lint.yml
1.load/: 1-setup.ipynb  1_download_profiles.ipynb  2-filter-raw.ipynb  2-preprocess.ipynb  2.1_merge_metadata_with_poscon.ipynb  2_merge_metadata.ipynb  3-subset.ipynb  3_preprocess_raw.ipynb  4-preprocess-subset.ipynb  4_preprocess_subset.ipynb  6_add_cell_counts.ipynb  6_explore_cell_counts.ipynb  load.py  load_profiles.py  preprocess.py
2.evalzoo/: .gitignore
2.evalzoo/params/: params_orf_group.yaml  params_orf_group_same_pert_diff_well.yaml  params_orf_group_same_well_diff_pert.yaml  params_orf_group_same_well_same_pert.yaml
2.evalzoo/params/full/: params_orf_full_same_pert_diff_well.yaml  params_orf_full_same_well_diff_pert.yaml  params_orf_full_same_well_same_pert.yaml
2.evalzoo/params/full_corrected/: params_orf_full_corr_same_pert_diff_well.yaml  (+2 more)
2.evalzoo/results/: toc.csv
3.correct/: 1_well_feature_center.ipynb  1_well_feature_center_full.ipynb  2_compare_metrics.ipynb  2_well_feature_center_subset.ipynb  3_compare_metrics_subset.ipynb  4_subset_from_full_corrected.ipynb  5_regress_out_cell_counts.ipynb  5_regress_out_cell_counts_subset.ipynb  6_regress_out_cell_counts_full.ipynb  7_visualize_well_mean.ipynb  8_make_subsets_of_features.ipynb  9_explore_batches_per_label.ipynb  correct_position_effect.py  plot_utils.py
4.copairs/: 1_copairs_test.ipynb  1_coparis_test.ipynb  2_compare_to_evalzoo.ipynb  one_jcp_test.ipynb
4.layout-checks/: 1.classify-negcons.ipynb  1_classify_negcons.ipynb  2_classify_poscons.ipynb  3_classify_wells.ipynb
5.load-dino/: 1_load_profiles.ipynb  2_merge_metadata.ipynb  README.md
configs/correction/: regress_cell_count.yaml
configs/load_profiles/: all_orfs.yaml
configs/metadata/: platemap.yaml  raw_profiles.yaml  well.yaml
configs/metadata_dino/: plate.yaml  platemap.yaml  raw_profiles.yaml
configs/metadata_with_poscon/: cell_count.yaml  orf.yaml  raw_profiles.yaml
configs/preprocess/: feature_select.yaml  normalize.yaml
configs/subset/: overlap_orfs.yaml
scripts/: correct_position_effect.py  load.py  plot_utils.py  preprocess.py
(+867 files in other folders)
