[tool.poetry]
name = "position-effect-correction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [{include = "position_effect_correction"}]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^1.5.3"
arrow = "^1.2.3"
pyarrow = "^11.0.0"
requests = "^2.28.2"
matplotlib = "^3.7.0"
plotly = "^5.13.0"
s3fs = "^2023.1.0"
fire = "^0.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
